@@ -1,3 +1,3 @@
 rem N70
-java -cp ../lib/midletrunner.jar;../lib/m3gbasic.jar;../lib/Grasshopper.jar;../lib/SwingME.jar;../dist/Domination4ME.jar org.me4se.MIDletRunner -width 320 -height 480 net.yura.domination.mobile.flashgui.DominationMain
+java -cp ../lib/midletrunner.jar;../lib/m3gbasic.jar;../lib/SwingME.jar;../dist/Domination4ME.jar org.me4se.MIDletRunner -width 320 -height 480 net.yura.domination.mobile.flashgui.DominationMain
 pause
